SONAR-16449 remove SonarCloud references in SonarQube codebase